--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
   "name": "harshal-utilities",
   "version": "1.0.0",
-  "description": "Modular AI Utility Toolkit for agentic applications",
-  "main": "index.js",
+  "description": "This nodejs was create to talk to gemini app",
+  "main": "gemini/geminiApi.js",
+  "exports": {
+    ".": "./gemini/geminiApi.js"
+  },
   "type": "module",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server/server.js | pino-pretty"
   },
-  "keywords": [
-    "ai",
-    "gemini",
-    "utilities"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.11.0",
-    "pino": "^9.2.0"
+    "pino": "^9.1.0"
   },
   "devDependencies": {
-    "pino-pretty": "^11.2.1"
+    "pino-pretty": "^11.2.1",
+    "nodemon": "^3.1.0"
   }
 }
